--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,14 +5,14 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇸🇬 新加坡-3.85MB/s(Youtube:不良林), server: bai-piao-wang-zhe12.98848.xyz, port: 36736, type: vmess, uuid: 50a9c98e-8c48-4680-feff-a7ea34705ae9, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ytryr6, ws-headers: {Host: bai-piao-wang-zhe12.98848.xyz}}
-  - {name: 🇨🇳 中国-494.0KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65093, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
-  - {name: 🇨🇳 中国-512.0KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-3.57MB/s(Youtube:不良林), server: 85.208.108.93, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
-  - {name: 🇮🇳 印度-1.67MB/s(Youtube:不良林), server: 3.111.242.2, port: 51846, type: ss, cipher: chacha20-ietf-poly1305, password: RekWopdog8}
+  - {name: 🇨🇳 中国-517.2KB/s(Youtube:不良林), server: 120.241.236.215, port: 16245, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-2.93MB/s(Youtube:不良林), server: 38.111.114.246, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
+  - {name: 🇺🇸 美国-3.03MB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20710, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-235.6KB/s(Youtube:不良林), server: 116.129.254.177, port: 65077, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
+  - {name: 🇸🇬 新加坡-4.28MB/s(Youtube:不良林), server: 47.241.220.160, port: 28475, type: vmess, uuid: 5b00ad6f-bc33-4946-8a32-b7e59620e935, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-451.4KB/s(Youtube:不良林), server: 120.241.236.216, port: 16214, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇯🇵 日本-3.12MB/s(Youtube:不良林), server: 85.208.108.93, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
   - {name: 🇨🇳 中国-434.7KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65070, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
-  - {name: 🇨🇳 中国-205.4KB/s(Youtube:不良林), server: 116.129.254.177, port: 65048, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
   - {name: 🇨🇳 中国-689.1KB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38106, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
   - {name: 🇨🇳 中国-461.3KB/s(Youtube:不良林), server: best02.downloadmovie.cn, port: 65097, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best02.downloadmovie.cn}}
 proxy-groups:
@@ -21,14 +21,14 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-3.85MB/s(Youtube:不良林)
-      - 🇨🇳 中国-494.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-512.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.57MB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-517.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.93MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-235.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-4.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-451.4KB/s(Youtube:不良林)
       - 🇯🇵 日本-3.12MB/s(Youtube:不良林)
       - 🇨🇳 中国-434.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-205.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-689.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-461.3KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
@@ -36,14 +36,14 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇸🇬 新加坡-3.85MB/s(Youtube:不良林)
-      - 🇨🇳 中国-494.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-512.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.57MB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-517.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.93MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-235.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-4.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-451.4KB/s(Youtube:不良林)
       - 🇯🇵 日本-3.12MB/s(Youtube:不良林)
       - 🇨🇳 中国-434.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-205.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-689.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-461.3KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
@@ -52,14 +52,14 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-3.85MB/s(Youtube:不良林)
-      - 🇨🇳 中国-494.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-512.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.57MB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-517.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.93MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-235.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-4.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-451.4KB/s(Youtube:不良林)
       - 🇯🇵 日本-3.12MB/s(Youtube:不良林)
       - 🇨🇳 中国-434.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-205.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-689.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-461.3KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
@@ -72,14 +72,14 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇸🇬 新加坡-3.85MB/s(Youtube:不良林)
-      - 🇨🇳 中国-494.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-512.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.57MB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-517.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.93MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-235.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-4.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-451.4KB/s(Youtube:不良林)
       - 🇯🇵 日本-3.12MB/s(Youtube:不良林)
       - 🇨🇳 中国-434.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-205.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-689.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-461.3KB/s(Youtube:不良林)
   - name: 📲 电报信息
@@ -87,14 +87,14 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-3.85MB/s(Youtube:不良林)
-      - 🇨🇳 中国-494.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-512.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.57MB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-517.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.93MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-235.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-4.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-451.4KB/s(Youtube:不良林)
       - 🇯🇵 日本-3.12MB/s(Youtube:不良林)
       - 🇨🇳 中国-434.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-205.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-689.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-461.3KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
@@ -103,14 +103,14 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇸🇬 新加坡-3.85MB/s(Youtube:不良林)
-      - 🇨🇳 中国-494.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-512.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.57MB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-517.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.93MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-235.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-4.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-451.4KB/s(Youtube:不良林)
       - 🇯🇵 日本-3.12MB/s(Youtube:不良林)
       - 🇨🇳 中国-434.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-205.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-689.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-461.3KB/s(Youtube:不良林)
   - name: 🎯 全球直连
@@ -128,14 +128,14 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇸🇬 新加坡-3.85MB/s(Youtube:不良林)
-      - 🇨🇳 中国-494.0KB/s(Youtube:不良林)
-      - 🇨🇳 中国-512.0KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.57MB/s(Youtube:不良林)
-      - 🇮🇳 印度-1.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-517.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.93MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-235.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-4.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-451.4KB/s(Youtube:不良林)
       - 🇯🇵 日本-3.12MB/s(Youtube:不良林)
       - 🇨🇳 中国-434.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-205.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-689.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-461.3KB/s(Youtube:不良林)
 rules:
