--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-517.2KB/s(Youtube:不良林), server: 120.241.236.215, port: 16245, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-2.93MB/s(Youtube:不良林), server: 38.111.114.246, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
-  - {name: 🇺🇸 美国-3.03MB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20710, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-235.6KB/s(Youtube:不良林), server: 116.129.254.177, port: 65077, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
-  - {name: 🇸🇬 新加坡-4.28MB/s(Youtube:不良林), server: 47.241.220.160, port: 28475, type: vmess, uuid: 5b00ad6f-bc33-4946-8a32-b7e59620e935, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-2.96MB/s(Youtube:不良林), server: 134.195.196.85, port: 5001, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇺🇸 美国-5.70MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-502.2KB/s(Youtube:不良林), server: 120.241.236.218, port: 16214, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-258.7KB/s(Youtube:不良林), server: 116.129.254.177, port: 65007, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
+  - {name: 🇯🇵 日本-3.54MB/s(Youtube:不良林), server: 85.208.108.93, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
   - {name: 🇨🇳 中国-451.4KB/s(Youtube:不良林), server: 120.241.236.216, port: 16214, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇯🇵 日本-3.12MB/s(Youtube:不良林), server: 85.208.108.93, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
   - {name: 🇨🇳 中国-434.7KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65070, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-517.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.93MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.03MB/s(Youtube:不良林)
-      - 🇨🇳 中国-235.6KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-4.28MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.96MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.70MB/s(Youtube:不良林)
+      - 🇨🇳 中国-502.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-258.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.54MB/s(Youtube:不良林)
       - 🇨🇳 中国-451.4KB/s(Youtube:不良林)
       - 🇯🇵 日本-3.12MB/s(Youtube:不良林)
       - 🇨🇳 中国-434.7KB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-517.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.93MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.03MB/s(Youtube:不良林)
-      - 🇨🇳 中国-235.6KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-4.28MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.96MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.70MB/s(Youtube:不良林)
+      - 🇨🇳 中国-502.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-258.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.54MB/s(Youtube:不良林)
       - 🇨🇳 中国-451.4KB/s(Youtube:不良林)
       - 🇯🇵 日本-3.12MB/s(Youtube:不良林)
       - 🇨🇳 中国-434.7KB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-517.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.93MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.03MB/s(Youtube:不良林)
-      - 🇨🇳 中国-235.6KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-4.28MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.96MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.70MB/s(Youtube:不良林)
+      - 🇨🇳 中国-502.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-258.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.54MB/s(Youtube:不良林)
       - 🇨🇳 中国-451.4KB/s(Youtube:不良林)
       - 🇯🇵 日本-3.12MB/s(Youtube:不良林)
       - 🇨🇳 中国-434.7KB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-517.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.93MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.03MB/s(Youtube:不良林)
-      - 🇨🇳 中国-235.6KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-4.28MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.96MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.70MB/s(Youtube:不良林)
+      - 🇨🇳 中国-502.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-258.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.54MB/s(Youtube:不良林)
       - 🇨🇳 中国-451.4KB/s(Youtube:不良林)
       - 🇯🇵 日本-3.12MB/s(Youtube:不良林)
       - 🇨🇳 中国-434.7KB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-517.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.93MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.03MB/s(Youtube:不良林)
-      - 🇨🇳 中国-235.6KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-4.28MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.96MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.70MB/s(Youtube:不良林)
+      - 🇨🇳 中国-502.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-258.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.54MB/s(Youtube:不良林)
       - 🇨🇳 中国-451.4KB/s(Youtube:不良林)
       - 🇯🇵 日本-3.12MB/s(Youtube:不良林)
       - 🇨🇳 中国-434.7KB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-517.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.93MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.03MB/s(Youtube:不良林)
-      - 🇨🇳 中国-235.6KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-4.28MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.96MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.70MB/s(Youtube:不良林)
+      - 🇨🇳 中国-502.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-258.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.54MB/s(Youtube:不良林)
       - 🇨🇳 中国-451.4KB/s(Youtube:不良林)
       - 🇯🇵 日本-3.12MB/s(Youtube:不良林)
       - 🇨🇳 中国-434.7KB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-517.2KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.93MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.03MB/s(Youtube:不良林)
-      - 🇨🇳 中国-235.6KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-4.28MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.96MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.70MB/s(Youtube:不良林)
+      - 🇨🇳 中国-502.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-258.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.54MB/s(Youtube:不良林)
       - 🇨🇳 中国-451.4KB/s(Youtube:不良林)
       - 🇯🇵 日本-3.12MB/s(Youtube:不良林)
       - 🇨🇳 中国-434.7KB/s(Youtube:不良林)
