--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇸🇬 新加坡-3.85MB/s(Youtube:不良林), server: bai-piao-wang-zhe12.98848.xyz, port: 36736, type: vmess, uuid: 50a9c98e-8c48-4680-feff-a7ea34705ae9, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ytryr6, ws-headers: {Host: bai-piao-wang-zhe12.98848.xyz}}
-  - {name: 🇨🇳 中国-5.31MB/s(Youtube:不良林), server: 120.241.236.216, port: 16215, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇨🇳 中国-1.38MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34003, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-3.85MB/s(Youtube:不良林), server: bai-piao-wang-zhe12.98848.xyz, port: 36736, type: vmess, uuid: 50a9c98e-8c48-4680-feff-a7ea34705ae9, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ytryr6, ws-headers: {Host: bai-piao-wang-zhe12.98848.xyz}}
   - {name: 🇨🇦 加拿大-1.96MB/s(Youtube:不良林), server: 196.247.59.154, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇳 中国-2.32MB/s(Youtube:不良林), server: 120.241.236.113, port: 16215, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.74MB/s(Youtube:不良林), server: 52.13.166.179, port: 59369, type: ss, cipher: chacha20-ietf-poly1305, password: fijboorrom}
+  - {name: 🇺🇸 美国-5.84MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
   - {name: 🇨🇳 中国-376.3KB/s(Youtube:不良林), server: 120.241.236.216, port: 16214, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇯🇵 日本-3.57MB/s(Youtube:不良林), server: 85.208.108.93, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
   - {name: 🇨🇳 中国-466.7KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65070, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
   - {name: 🇨🇳 中国-689.1KB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38106, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
-  - {name: 🇨🇳 中国-461.3KB/s(Youtube:不良林), server: best02.downloadmovie.cn, port: 65097, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best02.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-506.9KB/s(Youtube:不良林), server: best02.downloadmovie.cn, port: 65097, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best02.downloadmovie.cn}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-3.85MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.31MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.38MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.85MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.74MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.84MB/s(Youtube:不良林)
       - 🇨🇳 中国-376.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-3.57MB/s(Youtube:不良林)
       - 🇨🇳 中国-466.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-689.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-461.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-506.9KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇸🇬 新加坡-3.85MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.31MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.38MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.85MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.74MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.84MB/s(Youtube:不良林)
       - 🇨🇳 中国-376.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-3.57MB/s(Youtube:不良林)
       - 🇨🇳 中国-466.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-689.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-461.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-506.9KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-3.85MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.31MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.38MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.85MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.74MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.84MB/s(Youtube:不良林)
       - 🇨🇳 中国-376.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-3.57MB/s(Youtube:不良林)
       - 🇨🇳 中国-466.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-689.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-461.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-506.9KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇸🇬 新加坡-3.85MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.31MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.38MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.85MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.74MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.84MB/s(Youtube:不良林)
       - 🇨🇳 中国-376.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-3.57MB/s(Youtube:不良林)
       - 🇨🇳 中国-466.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-689.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-461.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-506.9KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-3.85MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.31MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.38MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.85MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.74MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.84MB/s(Youtube:不良林)
       - 🇨🇳 中国-376.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-3.57MB/s(Youtube:不良林)
       - 🇨🇳 中国-466.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-689.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-461.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-506.9KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇸🇬 新加坡-3.85MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.31MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.38MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.85MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.74MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.84MB/s(Youtube:不良林)
       - 🇨🇳 中国-376.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-3.57MB/s(Youtube:不良林)
       - 🇨🇳 中国-466.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-689.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-461.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-506.9KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇸🇬 新加坡-3.85MB/s(Youtube:不良林)
-      - 🇨🇳 中国-5.31MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.38MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.85MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.32MB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.74MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.84MB/s(Youtube:不良林)
       - 🇨🇳 中国-376.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-3.57MB/s(Youtube:不良林)
       - 🇨🇳 中国-466.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-689.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-461.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-506.9KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
