--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,13 +5,13 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-3.69MB/s(Youtube:不良林), server: 52.13.166.179, port: 59369, type: ss, cipher: chacha20-ietf-poly1305, password: fijboorrom}
-  - {name: 🇨🇳 中国-235.6KB/s(Youtube:不良林), server: 116.129.254.177, port: 65077, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
+  - {name: 🇸🇬 新加坡-3.85MB/s(Youtube:不良林), server: bai-piao-wang-zhe12.98848.xyz, port: 36736, type: vmess, uuid: 50a9c98e-8c48-4680-feff-a7ea34705ae9, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ytryr6, ws-headers: {Host: bai-piao-wang-zhe12.98848.xyz}}
+  - {name: 🇨🇳 中国-14.97MB/s(Youtube:不良林), server: 120.241.236.218, port: 16246, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-1.81MB/s(Youtube:不良林), server: 196.247.59.154, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇯🇵 日本-3.61MB/s(Youtube:不良林), server: 85.208.108.93, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
-  - {name: 🇨🇳 中国-19.72MB/s(Youtube:不良林), server: 120.241.236.215, port: 16215, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-3.87MB/s(Youtube:不良林), server: 85.208.108.93, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
-  - {name: 🇨🇳 中国-376.3KB/s(Youtube:不良林), server: 120.241.236.216, port: 16214, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-3.57MB/s(Youtube:不良林), server: 85.208.108.93, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
+  - {name: 🇯🇵 日本-3.57MB/s(Youtube:不良林), server: 85.208.108.93, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 🇨🇳 中国-12.61MB/s(Youtube:不良林), server: 120.241.236.216, port: 16214, type: vmess, uuid: c7cab382-c1a0-3a50-8606-280124aaad86, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-3.63MB/s(Youtube:不良林), server: 85.208.108.93, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
   - {name: 🇨🇳 中国-390.8KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65070, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
   - {name: 🇨🇳 中国-689.1KB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38106, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
   - {name: 🇨🇳 中国-506.9KB/s(Youtube:不良林), server: best02.downloadmovie.cn, port: 65097, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best02.downloadmovie.cn}}
@@ -21,13 +21,13 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-3.69MB/s(Youtube:不良林)
-      - 🇨🇳 中国-235.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-14.97MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.81MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.61MB/s(Youtube:不良林)
-      - 🇨🇳 中国-19.72MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.87MB/s(Youtube:不良林)
-      - 🇨🇳 中国-376.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-3.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.61MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.63MB/s(Youtube:不良林)
       - 🇨🇳 中国-390.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-689.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-506.9KB/s(Youtube:不良林)
@@ -36,13 +36,13 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-3.69MB/s(Youtube:不良林)
-      - 🇨🇳 中国-235.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-14.97MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.81MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.61MB/s(Youtube:不良林)
-      - 🇨🇳 中国-19.72MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.87MB/s(Youtube:不良林)
-      - 🇨🇳 中国-376.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-3.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.61MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.63MB/s(Youtube:不良林)
       - 🇨🇳 中国-390.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-689.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-506.9KB/s(Youtube:不良林)
@@ -52,13 +52,13 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-3.69MB/s(Youtube:不良林)
-      - 🇨🇳 中国-235.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-14.97MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.81MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.61MB/s(Youtube:不良林)
-      - 🇨🇳 中国-19.72MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.87MB/s(Youtube:不良林)
-      - 🇨🇳 中国-376.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-3.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.61MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.63MB/s(Youtube:不良林)
       - 🇨🇳 中国-390.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-689.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-506.9KB/s(Youtube:不良林)
@@ -72,13 +72,13 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-3.69MB/s(Youtube:不良林)
-      - 🇨🇳 中国-235.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-14.97MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.81MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.61MB/s(Youtube:不良林)
-      - 🇨🇳 中国-19.72MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.87MB/s(Youtube:不良林)
-      - 🇨🇳 中国-376.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-3.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.61MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.63MB/s(Youtube:不良林)
       - 🇨🇳 中国-390.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-689.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-506.9KB/s(Youtube:不良林)
@@ -87,13 +87,13 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-3.69MB/s(Youtube:不良林)
-      - 🇨🇳 中国-235.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-14.97MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.81MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.61MB/s(Youtube:不良林)
-      - 🇨🇳 中国-19.72MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.87MB/s(Youtube:不良林)
-      - 🇨🇳 中国-376.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-3.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.61MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.63MB/s(Youtube:不良林)
       - 🇨🇳 中国-390.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-689.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-506.9KB/s(Youtube:不良林)
@@ -103,13 +103,13 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-3.69MB/s(Youtube:不良林)
-      - 🇨🇳 中国-235.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-14.97MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.81MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.61MB/s(Youtube:不良林)
-      - 🇨🇳 中国-19.72MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.87MB/s(Youtube:不良林)
-      - 🇨🇳 中国-376.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-3.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.61MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.63MB/s(Youtube:不良林)
       - 🇨🇳 中国-390.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-689.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-506.9KB/s(Youtube:不良林)
@@ -128,13 +128,13 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-3.69MB/s(Youtube:不良林)
-      - 🇨🇳 中国-235.6KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-3.85MB/s(Youtube:不良林)
+      - 🇨🇳 中国-14.97MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.81MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.61MB/s(Youtube:不良林)
-      - 🇨🇳 中国-19.72MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.87MB/s(Youtube:不良林)
-      - 🇨🇳 中国-376.3KB/s(Youtube:不良林)
       - 🇯🇵 日本-3.57MB/s(Youtube:不良林)
+      - 🇨🇳 中国-12.61MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.63MB/s(Youtube:不良林)
       - 🇨🇳 中国-390.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-689.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-506.9KB/s(Youtube:不良林)
